# DiffusionWithAutoscaler

./: .gitignore  .lightningignore  .pre-commit-config.yaml  README.md  app.py  app_ait.py  app_dummy.py  app_emulator.py  app_interruptible.py  app_interruptible_toy.py  app_looping.py  app_preemptible.py  app_rubbish.py  autoscaler.py  client.py  cold_start_proxy.py  datatypes.py  deepspeed_app.py  deepspeed_client.py  dummy_app.py  example_ait.py  img2img_app.py  img2img_batched_client.py  img2img_client.py  img2img_cllient.py  pyproject.toml  send_request.py  setup.cfg  setup.py  test.py
benchmark/: batch_client.py  delay_batch_client.py
diffusion_with_autoscaler/: __init__.py  autoscaler.py  cold_start_proxy.py  datatypes.py  strategies.py
img2img/: app.py  batched_client.py  client.py
loadtest/: app.py  locustfile.py
tests/: conftest.py  test_autoscaler.py
