[build-system]
requires = [
    "setuptools",
    "wheel",
]


[tool.isort]
known_first_party = [
    "diffusion_with_autoscaler",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120


[tool.mypy]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"
